Export explicitly the ones whic have invoice state

--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -1962,7 +1962,7 @@ msgid "Fee:"
 msgstr "Gebühr:"
 
 msgid "Export Bill run as PDF"
-msgstr "PDF mit aktuellem Filter generieren"
+msgstr "Fakturierte Belege als PDF exportieren"
 
 msgid "No payments yet."
 msgstr "Noch keine Zahlungen."
