--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-10 02:37+0200\n"
+"POT-Creation-Date: 2025-07-10 13:50+0200\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -123,7 +123,7 @@ msgid "day"
 msgstr "jour"
 
 msgid "Start"
-msgstr "Démarrage"
+msgstr "Début"
 
 msgid "End"
 msgstr "Fin"
@@ -132,7 +132,7 @@ msgid "Add"
 msgstr "Ajouter"
 
 msgid "Remove"
-msgstr "Retirer"
+msgstr "Supprimer"
 
 msgid "Mo"
 msgstr "Lu"
@@ -842,7 +842,7 @@ msgid "Open"
 msgstr "Ouvert"
 
 msgid "Pending"
-msgstr "En attente"
+msgstr "En traitement"
 
 msgid "Closed"
 msgstr "Fermé"
@@ -1037,8 +1037,9 @@ msgid ""
 "Your request will be processed shortly. To see the state of your process "
 "your may return to this page at any time."
 msgstr ""
-"Votre demande sera traitée sous peu. Pour connaître l'état d'avancement de "
-"votre demande, vous pouvez revenir à tout moment sur cette page."
+"Votre demande sera traitée sous peu. Pour connaître l'état d'avancement du "
+"traitement de votre demande, vous pouvez revenir sur cette page à tout "
+"moment."
 
 msgid "Your request has been completed."
 msgstr "Votre demande a été traitée."
@@ -1056,7 +1057,7 @@ msgid "Credit Card Fee"
 msgstr "Frais de carte de crédit"
 
 msgid "Pay Offline later"
-msgstr "Payer hors ligne plus tard"
+msgstr "Payer par facture"
 
 msgid "at ${time}"
 msgstr "à ${time}"
@@ -1064,11 +1065,8 @@ msgstr "à ${time}"
 msgid "Object"
 msgstr "Objet"
 
-msgid "Reservation Start"
-msgstr "Début de la réservation"
-
-msgid "Reservation End"
-msgstr "Fin de la réservation"
+msgid "Reservation"
+msgstr "Réservation"
 
 msgid "Net Amount"
 msgstr "Montant net"
@@ -1113,7 +1111,7 @@ msgid "Not a publication"
 msgstr "Pas une publication"
 
 msgid "Digital seal"
-msgstr "Sceau digital"
+msgstr "Sceau électronique"
 
 msgid "Content"
 msgstr "Contenu"
@@ -1382,7 +1380,7 @@ msgid "Your change request has been applied:"
 msgstr "Votre demande de modification a été effectuée:"
 
 msgid "Your directory submission has unfortunately been rejected:"
-msgstr "Votre proposition de répertoire a malheureusement été rejetée :"
+msgstr "Votre proposition de répertoire a malheureusement été rejetée:"
 
 msgid "The rejection of your directory application has been withdrawn:"
 msgstr "Le refus de votre inscription à l'annuaire a été retiré:"
@@ -1473,7 +1471,7 @@ msgid "Click here to view web version."
 msgstr "Cliquer ici pour voir la version internet."
 
 msgid "You no longer wish to receive the newsletter?"
-msgstr "Vous ne souhaitez plus recevoir la lettre d'informations ?"
+msgstr "Vous ne souhaitez plus recevoir la lettre d'informations?"
 
 msgid ""
 "The user with the address ${address} just unsubscribed from the newsletter "
@@ -2384,7 +2382,7 @@ msgstr ""
 "lorsque l'on est connecté et que le navigateur avec le site est ouvert."
 
 msgid "Archive all selected tickets?"
-msgstr "Archiver tous les billets sélectionnés ?"
+msgstr "Archiver tous les billets sélectionnés?"
 
 msgid "Do Archive"
 msgstr "Archiver"
@@ -2591,7 +2589,7 @@ msgid "Analytics"
 msgstr "Analytics"
 
 msgid "Holidays"
-msgstr "Jours fériés"
+msgstr "Jours fériés / Vacances scolaires"
 
 msgid "Tickets"
 msgstr "Tickets"
@@ -2626,404 +2624,3 @@ msgstr "Ratsinformationssystem (RIS)"
 
 msgid "New Note"
 msgstr "Nouveau commentaire"
-
-#~ msgid "Ausgewählte als fakturiert markieren"
-#~ msgstr "Marquer la sélection comme facturée"
-
-#~ msgid "Sign up"
-#~ msgstr "S'inscrire"
-
-#~ msgid "Notify on newsletter unsubscription"
-#~ msgstr "Notifier le désabonnement à la lettre d'information"
-
-#~ msgid ""
-#~ "Send an email notification when a user unsubscribes from the newsletter"
-#~ msgstr ""
-#~ "Envoyer une notification par courrier électronique lorsqu'un utilisateur "
-#~ "se désinscrit de la lettre d'information"
-
-#~ msgid "Sign up to our newsletter to always stay up to date:"
-#~ msgstr ""
-#~ "Abonnez-vous à notre lettre d'informations pour rester au courant en "
-#~ "permanence:"
-
-#~ msgid "Change Request"
-#~ msgstr "Demande de modification"
-
-#~ msgid "Found an error? Propose a change to this entry."
-#~ msgstr ""
-#~ "Vous avez trouvé une erreur? Proposez une modification à apporter à cette "
-#~ "entrée."
-
-#~ msgid "Propose entry"
-#~ msgstr "Proposer une entrée"
-
-#~ msgid "Something missing? Propose a new entry."
-#~ msgstr "Il manque quelque chose? Proposez une nouvelle entrée."
-
-#~ msgid "Newsletter Subscription"
-#~ msgstr "Abonnement à la newsletter "
-
-#~ msgid "Update Newsletter Subscription"
-#~ msgstr "Mettre à jour l'abonnement à la lettre d'information"
-
-#~ msgid "Update your newsletter subscription categories:"
-#~ msgstr "Mettre à jour les catégories d'abonnement à la newsletter:"
-
-#~ msgid ""
-#~ "Select newsletter categories your are interested in. You will receive the "
-#~ "newsletter if it reports on at least one of the subscribed categories."
-#~ msgstr ""
-#~ "Sélectionnez les catégories de lettres d'information qui vous "
-#~ "intéressent. Vous recevrez la newsletter si elle traite d'au moins une "
-#~ "des catégories souscrites."
-
-#~ msgid ""
-#~ "Select categories the newsletter reports on. The users will receive the "
-#~ "newsletter only if it reports on at least one of the categories the user "
-#~ "subscribed to."
-#~ msgstr ""
-#~ "Sélectionnez les catégories sur lesquelles la lettre d'information porte. "
-#~ "Les utilisateurs ne recevront la lettre d'information que si elle "
-#~ "concerne au moins l'une des catégories auxquelles l'utilisateur s'est "
-#~ "abonné."
-
-#~ msgid ""
-#~ "Example for newsletter topics with subtopics in yaml format. Note: Deeper "
-#~ "structures are not supported.\n"
-#~ "```\n"
-#~ "Organisation:\n"
-#~ "  - Topic 1:\n"
-#~ "    - Subtopic 1.1\n"
-#~ "    - Subtopic 1.2\n"
-#~ "  - Topic 2\n"
-#~ "  - Topic 3:\n"
-#~ "    - Subtopic 3.1\n"
-#~ "```"
-#~ msgstr ""
-#~ "Exemple de sujets de newsletter avec des sous-sujets au format yaml. "
-#~ "Note : Les structures plus profondes ne sont pas prises en charge. \n"
-#~ "```\n"
-#~ "Organisation:\n"
-#~ "  - Thème 1:\n"
-#~ "  - Sous-thème 1.1\n"
-#~ "  - Sous-thème 1.2\n"
-#~ "  - Thème 2\n"
-#~ "  - Thème 3:\n"
-#~ "  - Sous-thème 3.1```"
-
-#~ msgid "Error: No custom texts found"
-#~ msgstr "Erreur: Aucun texte personnalisé n'a été trouvé"
-
-#, python-format
-#~ msgid "Error: No custom text found for '${key}'"
-#~ msgstr "Erreur : Aucun texte personnalisé n'a été trouvé pour '${key}'"
-
-#~ msgid "Subscribe to Selection as RSS"
-#~ msgstr "S'abonner aux hashtags"
-
-#~ msgid "Save"
-#~ msgstr "Sauver"
-
-#~ msgid "This event can't be edited."
-#~ msgstr "Cet événement ne peut pas être édité."
-
-#~ msgid "Imported events can not be edited."
-#~ msgstr "Les événements importés ne peuvent pas être édités."
-
-#~ msgid "Withdraw event"
-#~ msgstr "Retirer l'événement"
-
-#~ msgid "Do you really want to withdraw this event?"
-#~ msgstr "Voulez-vous retirer l'événement?"
-
-#~ msgid "You can re-publish an imported event later."
-#~ msgstr "Vous pouvez republier un événement importé plus tard."
-
-#~ msgid "Re-publish event"
-#~ msgstr "Republier l'événement"
-
-#~ msgid "Do you really want to delete this event?"
-#~ msgstr "Voulez-vous vraiment supprimer cet événement ?"
-
-#~ msgid "Delete event"
-#~ msgstr "Supprimer l'événement"
-
-#~ msgid "This event can't be deleted."
-#~ msgstr "Cet événement ne peut être supprimé."
-
-#~ msgid "To remove this event, go to the ticket and reject it."
-#~ msgstr "Pour supprimer cet événement, allez sur le ticket et refusez-le."
-
-#~ msgid "Show news as tiles"
-#~ msgstr "Afficher les actualités sous forme de tuiles"
-
-#~ msgid ""
-#~ "If checked, news are displayed as tiles. Otherwise, news are listed in "
-#~ "full length."
-#~ msgstr ""
-#~ "Si cette case est activée, les nouvelles sont affichées sous forme de "
-#~ "tuiles. Dans le cas contraire, les nouvelles sont listés dans leur "
-#~ "intégralité."
-
-#~ msgid "Settings"
-#~ msgstr "Paramètres"
-
-#~ msgid "Forms"
-#~ msgstr "Formulaires"
-
-#~ msgid "This form can't be deleted."
-#~ msgstr "Ce formulaire ne peut être supprimé."
-
-#~ msgid ""
-#~ "There are submissions associated with the form. Those need to be removed "
-#~ "first."
-#~ msgstr ""
-#~ "Il existe des requêtes associées à ce formulaire. Il faut d'abord les "
-#~ "supprimer."
-
-#~ msgid "Do you really want to delete this form?"
-#~ msgstr "Voulez-vous vraiment supprimer ce formulaire ?"
-
-#~ msgid "Delete form"
-#~ msgstr "Supprimer le formulaire"
-
-#~ msgid "Registration Windows"
-#~ msgstr "Fenêtres d'inscription"
-
-#~ msgid "External form"
-#~ msgstr "Formulaire externe"
-
-#~ msgid "New external form"
-#~ msgstr "Nouveau formulaire externe"
-
-#~ msgid "Person"
-#~ msgstr "Personne"
-
-#~ msgid "Do you really want to delete this person?"
-#~ msgstr "Voulez-vous vraiment supprimer cette personne ?"
-
-#~ msgid "Delete person"
-#~ msgstr "Supprimer la personne"
-
-#~ msgid "Delete archived tickets"
-#~ msgstr "Supprimer les tickets archivés"
-
-#~ msgid "Do you really want to delete all archived tickets?"
-#~ msgstr "Voulez-vous vraiment supprimer tous les tickets archivés ?"
-
-#~ msgid "Accept ticket"
-#~ msgstr "Accepter le ticket"
-
-#~ msgid "This ticket can't be closed."
-#~ msgstr "Ce ticket ne peut pas être fermé."
-
-#~ msgid "This ticket requires a decision, but no decision has been made yet."
-#~ msgstr "Ce ticket nécessite une décision, mais aucune n'a encore été prise."
-
-#~ msgid "Assign ticket"
-#~ msgstr "Attribuer le ticket"
-
-#~ msgid "Close ticket"
-#~ msgstr "Fermer le ticket"
-
-#~ msgid "Reopen ticket"
-#~ msgstr "Ré-ouvrir le ticket"
-
-#~ msgid "Archive ticket"
-#~ msgstr "Archiver le ticket"
-
-#~ msgid "Recover from archive"
-#~ msgstr "Récupérer dans les archives"
-
-#~ msgid "Delete Ticket"
-#~ msgstr "Supprimer le ticket"
-
-#~ msgid "PDF"
-#~ msgstr "PDF"
-
-#~ msgid "Download files"
-#~ msgstr "Télécharger les fichiers"
-
-#~ msgid "New Message"
-#~ msgstr "Nouveau message"
-
-#~ msgid "Ticket Status"
-#~ msgstr "Statut du ticket"
-
-#~ msgid "Text modules"
-#~ msgstr "Modules de texte"
-
-#~ msgid "Text module"
-#~ msgstr "Module de texte"
-
-#~ msgid "Do you really want to delete this text module?"
-#~ msgstr "Voulez-vous vraiment supprimer ce module de texte ?"
-
-#~ msgid "Delete text module"
-#~ msgstr "Supprimer le module de texte"
-
-#~ msgid "Room"
-#~ msgstr "Espace"
-
-#~ msgid "Daypass"
-#~ msgstr "Carte journalière"
-
-#~ msgid "Resource Item"
-#~ msgstr "Article"
-
-#~ msgid "External resource link"
-#~ msgstr "Lien de ressource externe"
-
-#~ msgid "New external resource"
-#~ msgstr "Nouvelle ressource externe"
-
-#~ msgid "Export All"
-#~ msgstr "Exporter tout"
-
-#~ msgid "Notifications"
-#~ msgstr "Notifications"
-
-#~ msgid "E-Mail Recipient"
-#~ msgstr "Destinataire de l'e-mail"
-
-#~ msgid "Do you really want to delete this resource?"
-#~ msgstr "Voulez-vous vraiment supprimer cette ressource ?"
-
-#~ msgid "Delete resource"
-#~ msgstr "Supprimer la ressource"
-
-#~ msgid "This resource can't be deleted."
-#~ msgstr "Cette ressource ne peut être supprimée."
-
-#~ msgid "There are existing reservations associated with this resource"
-#~ msgstr "Des réservations existantes sont associées à cette ressource"
-
-#~ msgid "Clean up"
-#~ msgstr "Nettoyer"
-
-#~ msgid "Rules"
-#~ msgstr "Règles"
-
-#~ msgid "Rule"
-#~ msgstr "Règle"
-
-#~ msgid "Edit allocation"
-#~ msgstr "Modifier l'allocation"
-
-#~ msgid "Do you really want to delete this allocation?"
-#~ msgstr "Voulez-vous vraiment supprimer cette allocation ?"
-
-#~ msgid "Delete allocation"
-#~ msgstr "Supprimer l'allocation"
-
-#, python-format
-#~ msgid "Every ${days} until ${end}"
-#~ msgstr "Tous les ${days} jusqu'à ${end}"
-
-#~ msgid "Subscribers"
-#~ msgstr "Abonnés"
-
-#~ msgid "Test"
-#~ msgstr "Test"
-
-#~ msgid "Delete newsletter"
-#~ msgstr "Supprimer la newsletter"
-
-#~ msgid "Photo Albums"
-#~ msgstr "Albums photo"
-
-#~ msgid "Manage images"
-#~ msgstr "Gérer les images"
-
-#~ msgid "Photo Album"
-#~ msgstr "Album photo"
-
-#~ msgid "Choose images"
-#~ msgstr "Choisir des images"
-
-#~ msgid "Delete photo album"
-#~ msgstr "Supprimer l'album photo"
-
-#~ msgid "Usermanagement"
-#~ msgstr "Gestion de l'utilisateur"
-
-#~ msgid "Create Signup Link"
-#~ msgstr "Créez un lien d'inscription"
-
-#~ msgid "User"
-#~ msgstr "Utilisateur"
-
-#~ msgid "User groups"
-#~ msgstr "Groupes d'utilisateurs"
-
-#~ msgid "Do you really want to delete this user group?"
-#~ msgstr "Voulez-vous vraiment supprimer ce groupe d'utilisateurs ?"
-
-#~ msgid "Delete user group"
-#~ msgstr "Supprimer le groupe d'utilisateurs"
-
-#~ msgid "Payment Providers"
-#~ msgstr "Opérateurs de paiement"
-
-#~ msgid "Payments"
-#~ msgstr "Paiements"
-
-#~ msgid "Synchronise"
-#~ msgstr "Synchroniser"
-
-#~ msgid "Upcoming"
-#~ msgstr "A l'anvenir"
-
-#~ msgid "Past"
-#~ msgstr "Passé"
-
-#~ msgid "Choose filter"
-#~ msgstr "Sélectionner un filtre"
-
-#~ msgid "Delete entry"
-#~ msgstr "Supprimer l'entrée"
-
-#~ msgid "Dashboard"
-#~ msgstr "Dashboard"
-
-#~ msgid "Do you really want to delete this external link?"
-#~ msgstr "Voulez-vous vraiment supprimer ce lien externe?"
-
-#~ msgid "Delete external link"
-#~ msgstr "Supprimer lien externe"
-
-#~ msgid "Chat with"
-#~ msgstr "Chat avec"
-
-#~ msgid "Please add a day and times to each opening hour entry."
-#~ msgstr "Veuillez ajouter un jour et des heures à chaque heure d'ouverture."
-
-#~ msgid "The chat is currently in a test-phase. Activate at your own risk."
-#~ msgstr ""
-#~ "Le chat est actuellement en phase de test. Activer à vos risques et périls"
-
-#~ msgid "Chat title"
-#~ msgstr "Title du Chat"
-
-#~ msgid "Chat background color"
-#~ msgstr "Couleur de fond de Chat"
-
-#~ msgid "Customer-ID"
-#~ msgstr "Identifiant du client"
-
-#~ msgid "Admin"
-#~ msgstr "Admin"
-
-#~ msgid "Disable the chat"
-#~ msgstr "Désactiver le Chat"
-
-#~ msgid "Supported Chat Integrations"
-#~ msgstr "Integrations de Chat supportées"
-
-#~ msgid "Straight to ..."
-#~ msgstr "Directement à ..."
-
-#~ msgid "Perform Search"
-#~ msgstr "Rechercher"
-
