--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2025-07-10 02:37+0200\n"
+"POT-Creation-Date: 2025-07-10 13:50+0200\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -127,7 +127,7 @@ msgid "Add"
 msgstr "Aggiungi"
 
 msgid "Remove"
-msgstr "Rimuovere"
+msgstr "Rimuovi"
 
 msgid "Mo"
 msgstr "Lu"
@@ -1056,7 +1056,7 @@ msgid "Credit Card Fee"
 msgstr "Commissione sulla carta di credito"
 
 msgid "Pay Offline later"
-msgstr "Paga offline successivamente"
+msgstr "Pagare con fattura"
 
 msgid "at ${time}"
 msgstr "alle ${time}"
@@ -1064,11 +1064,8 @@ msgstr "alle ${time}"
 msgid "Object"
 msgstr "Oggetto"
 
-msgid "Reservation Start"
-msgstr "Inizio della prenotazione"
-
-msgid "Reservation End"
-msgstr "Fine della prenotazione"
+msgid "Reservation"
+msgstr "Prenotazione"
 
 msgid "Net Amount"
 msgstr "Importo netto"
@@ -1233,7 +1230,7 @@ msgstr ""
 "disturberemo mai più."
 
 msgid "Below you can see your chat conversation:"
-msgstr "Di seguito potete vedere la vostra conversazione in chat:"
+msgstr "Qui di seguito potete vedere la vostra conversazione in chat:"
 
 msgid "Have a great day!"
 msgstr "Ti auguro una buona giornata!"
@@ -1288,7 +1285,7 @@ msgid ""
 "You are receiving this mail because you subscribed to getting notifications "
 "on new entries in the following directory:"
 msgstr ""
-"Ricevi questa mail perché sei iscritto a ricevere notifiche su nuovi "
+"Ricevi questa mail perché ti sei iscritto a ricevere notifiche su nuovi "
 "elementi nella seguente cartella:"
 
 msgid ""
@@ -1405,9 +1402,10 @@ msgid ""
 "title}. If you no longer want to receive this e-mail please contact an "
 "administrator so they can remove you from the recipients list."
 msgstr ""
-"Dies ist die Benachrichtigung für Notiz zu Reservierungen für ${request.app."
-"org.title}. Wenn Sie diese E-Mail nicht mehr erhalten möchten, kontaktieren "
-"Sie bitte einen Administrator, damit dieser Sie aus der Liste entfernen kann."
+"Questa è la notifica per le note sulle prenotazioni per ${request.app.org."
+"title}. Se non si desidera più ricevere questo messaggio di posta "
+"elettronica si prega di contattare un amministratore in modo che possa "
+"rimuovervi dall'elenco dei destinatari lista"
 
 msgid "Pending approval"
 msgstr "In attesa di approvazione"
@@ -1954,7 +1952,7 @@ msgid "Fee:"
 msgstr "Imposta:"
 
 msgid "Export Bill run as PDF"
-msgstr "Esportazione della fattura in formato PDF"
+msgstr "Esporta l'esecuzione della fattura come PDF"
 
 msgid "No payments yet."
 msgstr "Nessun pagamento ancora."
@@ -2586,7 +2584,7 @@ msgid "Analytics"
 msgstr "Analitica"
 
 msgid "Holidays"
-msgstr "Festività"
+msgstr "Festività / Vacanze scolastiche"
 
 msgid "Tickets"
 msgstr "Biglietti"
@@ -2622,398 +2620,3 @@ msgstr "Sistema di informazione sui ratti (RIS)"
 
 msgid "New Note"
 msgstr "Nuova nota"
-
-#~ msgid "Ausgewählte als fakturiert markieren"
-#~ msgstr "Contrassegnare il selezionato come fatturato"
-
-#~ msgid "Sign up"
-#~ msgstr "Iscriviti"
-
-#~ msgid "Notify on newsletter unsubscription"
-#~ msgstr "Notifica di annullamento dell'iscrizione alla newsletter"
-
-#~ msgid ""
-#~ "Send an email notification when a user unsubscribes from the newsletter"
-#~ msgstr ""
-#~ "Inviare una notifica via e-mail quando un utente si cancella dalla "
-#~ "newsletter"
-
-#~ msgid "Sign up to our newsletter to always stay up to date:"
-#~ msgstr "Iscriviti alla nostra newsletter per rimanere sempre aggiornato:"
-
-#~ msgid "Change Request"
-#~ msgstr "Richiesta di modifica"
-
-#~ msgid "Found an error? Propose a change to this entry."
-#~ msgstr "Trovato un errore? Proponi una modifica a questo elemento."
-
-#~ msgid "Propose entry"
-#~ msgstr "Proponi un elemento"
-
-#~ msgid "Something missing? Propose a new entry."
-#~ msgstr "Manca qualcosa? Proponi un nuovo elemento."
-
-#~ msgid "Newsletter Subscription"
-#~ msgstr "Abbonamento alla newsletter "
-
-#~ msgid "Update Newsletter Subscription"
-#~ msgstr "Aggiornare l'abbonamento alla newsletter "
-
-#~ msgid "Update Subscription"
-#~ msgstr "Aggiornare l'abbonamento"
-
-#~ msgid "Update your newsletter subscription categories:"
-#~ msgstr "Aggiornare le categorie di abbonamento alla newsletter:"
-
-#~ msgid ""
-#~ "Select newsletter categories your are interested in. You will receive the "
-#~ "newsletter if it reports on at least one of the subscribed categories."
-#~ msgstr ""
-#~ "Selezionate le categorie di newsletter a cui siete interessati. "
-#~ "Riceverete la newsletter se riporta almeno una delle categorie "
-#~ "sottoscritte"
-
-#~ msgid ""
-#~ "Select categories the newsletter reports on. The users will receive the "
-#~ "newsletter only if it reports on at least one of the categories the user "
-#~ "subscribed to."
-#~ msgstr ""
-#~ "Selezionare le categorie per le quali viene segnalata la newsletter. Gli "
-#~ "utenti riceveranno la newsletter solo se si riferisce ad almeno una delle "
-#~ "categorie a cui l'utente si è iscritto."
-
-#~ msgid ""
-#~ "Example for newsletter topics with subtopics in yaml format. Note: Deeper "
-#~ "structures are not supported.\n"
-#~ "```\n"
-#~ "Organisation:\n"
-#~ "  - Topic 1:\n"
-#~ "    - Subtopic 1.1\n"
-#~ "    - Subtopic 1.2\n"
-#~ "  - Topic 2\n"
-#~ "  - Topic 3:\n"
-#~ "    - Subtopic 3.1\n"
-#~ "```"
-#~ msgstr ""
-#~ "Esempio di argomenti di newsletter con sottoargomenti in formato yaml. "
-#~ "Nota: Le strutture più profonde non sono supportate.\n"
-#~ "```\n"
-#~ "Organizzazione:\n"
-#~ " - Argomento 1:\n"
-#~ "   - Sottotema 1.1\n"
-#~ "   - Sottotema 1.2\n"
-#~ " - Argomento 2\n"
-#~ " - Argomento 3:\n"
-#~ "   - Sottotema 3.1\n"
-#~ "```"
-
-#~ msgid "Error: No custom texts found"
-#~ msgstr "Errore: Nessun testo personalizzato trovato"
-
-#, python-format
-#~ msgid "Error: No custom text found for '${key}'"
-#~ msgstr "Errore: Nessun testo personalizzato trovato per '${key}'"
-
-#~ msgid "Subscribe to Selection as RSS"
-#~ msgstr "Iscriversi agli hashtag"
-
-#~ msgid "Save"
-#~ msgstr "Risparmiare"
-
-#~ msgid "This event can't be edited."
-#~ msgstr "Questo evento non può essere modificato."
-
-#~ msgid "Imported events can not be edited."
-#~ msgstr "Gli eventi importati non possono essere modificati."
-
-#~ msgid "Withdraw event"
-#~ msgstr "Ritira evento"
-
-#~ msgid "Do you really want to withdraw this event?"
-#~ msgstr "Vuoi davvero ritirare questo evento?"
-
-#~ msgid "You can re-publish an imported event later."
-#~ msgstr "Puoi ripubblicare un evento importato in un secondo momento."
-
-#~ msgid "Re-publish event"
-#~ msgstr "Ripubblica l'evento"
-
-#~ msgid "Do you really want to delete this event?"
-#~ msgstr "Desideri davvero eliminare questo evento?"
-
-#~ msgid "Delete event"
-#~ msgstr "Elimina evento"
-
-#~ msgid "This event can't be deleted."
-#~ msgstr "Questo evento non può essere eliminato."
-
-#~ msgid "To remove this event, go to the ticket and reject it."
-#~ msgstr "Per rimuovere questo evento, vai al biglietto e rifiutalo."
-
-#~ msgid "Show news as tiles"
-#~ msgstr "Mostra le notizie come piastrelle"
-
-#~ msgid ""
-#~ "If checked, news are displayed as tiles. Otherwise, news are listed in "
-#~ "full length."
-#~ msgstr ""
-#~ "Se questa opzione è attivata, i notizie vengono visualizzati come "
-#~ "tessere. Altrimenti, i notizie sono elencati per intero."
-
-#~ msgid "Settings"
-#~ msgstr "Impostazioni"
-
-#~ msgid "Forms"
-#~ msgstr "Moduli"
-
-#~ msgid "This form can't be deleted."
-#~ msgstr "Questo modulo non può essere eliminato."
-
-#~ msgid ""
-#~ "There are submissions associated with the form. Those need to be removed "
-#~ "first."
-#~ msgstr ""
-#~ "Sono presenti invii associati al modulo. Questi devono essere rimossi "
-#~ "prima di tutto."
-
-#~ msgid "Do you really want to delete this form?"
-#~ msgstr "Vuoi davvero eliminare questo modulo?"
-
-#~ msgid "Delete form"
-#~ msgstr "Elimina modulo"
-
-#~ msgid "Registration Windows"
-#~ msgstr "Finestre di registrazione"
-
-#~ msgid "External form"
-#~ msgstr "Modulo esterno"
-
-#~ msgid "New external form"
-#~ msgstr "Nuovo modulo esterno"
-
-#~ msgid "Person"
-#~ msgstr "Persona"
-
-#~ msgid "Do you really want to delete this person?"
-#~ msgstr "Vuoi davvero eliminare questa persona?"
-
-#~ msgid "Delete person"
-#~ msgstr "Elimina persona"
-
-#~ msgid "Delete archived tickets"
-#~ msgstr "Cancellare i biglietti archiviati"
-
-#~ msgid "Do you really want to delete all archived tickets?"
-#~ msgstr "Volete davvero cancellare tutti i biglietti archiviati?"
-
-#~ msgid "Accept ticket"
-#~ msgstr "Accetta il biglietto"
-
-#~ msgid "This ticket can't be closed."
-#~ msgstr "Questo biglietto non può essere chiuso."
-
-#~ msgid "This ticket requires a decision, but no decision has been made yet."
-#~ msgstr ""
-#~ "Questo biglietto richiede una decisione, ma nessuna decisione è stata "
-#~ "ancora presa."
-
-#~ msgid "Assign ticket"
-#~ msgstr "Assegna il biglietto"
-
-#~ msgid "Close ticket"
-#~ msgstr "Chiudi il biglietto"
-
-#~ msgid "Reopen ticket"
-#~ msgstr "Riapri il biglietto"
-
-#~ msgid "Archive ticket"
-#~ msgstr "Archivia il biglietto"
-
-#~ msgid "Recover from archive"
-#~ msgstr "Recupera dall'archivio"
-
-#~ msgid "Delete Ticket"
-#~ msgstr "Cancella biglietto"
-
-#~ msgid "PDF"
-#~ msgstr "PDF"
-
-#~ msgid "Download files"
-#~ msgstr "Scarica i file"
-
-#~ msgid "New Message"
-#~ msgstr "Nuovo messaggio"
-
-#~ msgid "Ticket Status"
-#~ msgstr "Stato del biglietto"
-
-#~ msgid "Text modules"
-#~ msgstr "Moduli di testo"
-
-#~ msgid "Text module"
-#~ msgstr "Modulo di testo"
-
-#~ msgid "Do you really want to delete this text module?"
-#~ msgstr "Confermi di voler eliminare questo modulo di testo?"
-
-#~ msgid "Delete text module"
-#~ msgstr "Elimina modulo di testo"
-
-#~ msgid "Room"
-#~ msgstr "Camera"
-
-#~ msgid "Daypass"
-#~ msgstr "Biglietto giornaliero"
-
-#~ msgid "Resource Item"
-#~ msgstr "Elemento risorsa"
-
-#~ msgid "External resource link"
-#~ msgstr "Link a risorse esterne"
-
-#~ msgid "New external resource"
-#~ msgstr "Nuova risorsa esterna"
-
-#~ msgid "Export All"
-#~ msgstr "Esportazione di tutti"
-
-#, fuzzy
-#~ msgid "Notifications"
-#~ msgstr "Conferma"
-
-#~ msgid "E-Mail Recipient"
-#~ msgstr "E-mail del destinatario"
-
-#~ msgid "Do you really want to delete this resource?"
-#~ msgstr "Vuoi davvero eliminare questa risorsa?"
-
-#~ msgid "Delete resource"
-#~ msgstr "Elimina risorsa"
-
-#~ msgid "This resource can't be deleted."
-#~ msgstr "Non può essere eliminata."
-
-#~ msgid "There are existing reservations associated with this resource"
-#~ msgstr "Sono presenti delle prenotazioni associate a questa risorsa"
-
-#~ msgid "Clean up"
-#~ msgstr "Ripulisci"
-
-#~ msgid "Rules"
-#~ msgstr "Regole"
-
-#~ msgid "Rule"
-#~ msgstr "Regola"
-
-#~ msgid "Edit allocation"
-#~ msgstr "Modifica allocazione"
-
-#~ msgid "Do you really want to delete this allocation?"
-#~ msgstr "Vuoi davvero eliminare questa allocazione?"
-
-#~ msgid "Delete allocation"
-#~ msgstr "Elimina allocazione"
-
-#, python-format
-#~ msgid "Every ${days} until ${end}"
-#~ msgstr "Ogni ${days} fino al ${end}"
-
-#~ msgid "Subscribers"
-#~ msgstr "Iscritti"
-
-#~ msgid "Test"
-#~ msgstr "Test"
-
-#~ msgid "Delete newsletter"
-#~ msgstr "Elimina newsletter"
-
-#~ msgid "Photo Albums"
-#~ msgstr "Album fotografici"
-
-#~ msgid "Manage images"
-#~ msgstr "Gestisci immagini"
-
-#~ msgid "Photo Album"
-#~ msgstr "Album fotografico"
-
-#~ msgid "Choose images"
-#~ msgstr "Scegli le immagini"
-
-#~ msgid "Delete photo album"
-#~ msgstr "Elimina l'album fotografico"
-
-#~ msgid "Usermanagement"
-#~ msgstr "Gestione utenti"
-
-#~ msgid "Create Signup Link"
-#~ msgstr "Crea collegamento di iscrizione"
-
-#~ msgid "User"
-#~ msgstr "Utente"
-
-#~ msgid "User groups"
-#~ msgstr "Gruppi di utenti"
-
-#~ msgid "Do you really want to delete this user group?"
-#~ msgstr "Vuoi davvero eliminare questo gruppo di utenti?"
-
-#~ msgid "Delete user group"
-#~ msgstr "Elimina gruppo di utenti"
-
-#~ msgid "Payment Providers"
-#~ msgstr "Provider di servizi di pagamento"
-
-#~ msgid "Payments"
-#~ msgstr "Pagamenti"
-
-#~ msgid "Synchronise"
-#~ msgstr "Sincronizza"
-
-#~ msgid "Upcoming"
-#~ msgstr "In arrivo"
-
-#~ msgid "Past"
-#~ msgstr "Passato"
-
-#~ msgid "Choose filter"
-#~ msgstr "Scegli filtro"
-
-#~ msgid "Delete entry"
-#~ msgstr "Elimina elemento"
-
-#~ msgid "Dashboard"
-#~ msgstr "Pannello di controllo"
-
-#~ msgid "Do you really want to delete this external link?"
-#~ msgstr "Vuoi davvero eliminare questo collegamento esterno?"
-
-#~ msgid "Delete external link"
-#~ msgstr "Elimina collegamento esterno"
-
-#~ msgid "Chat with"
-#~ msgstr "Chat con"
-
-#~ msgid "Please add a day and times to each opening hour entry."
-#~ msgstr ""
-#~ "Si prega di aggiungere un giorno e un orario a ciascuna voce relativa "
-#~ "all'orario di apertura."
-
-#~ msgid "The chat is currently in a test-phase. Activate at your own risk."
-#~ msgstr ""
-#~ "a chat è attualmente in fase di test. Attivare a proprio rischio e "
-#~ "pericolo"
-
-#~ msgid "Chat title"
-#~ msgstr "Titolo della chat"
-
-#~ msgid "Chat background color"
-#~ msgstr "Colore di sfondo della chat"
-
-#~ msgid "Customer-ID"
-#~ msgstr "ID cliente"
-
-#~ msgid "Admin"
-#~ msgstr "Amministratore"
-
-#~ msgid "Disable the chat"
-#~ msgstr "Disattivare la chat"
