--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-07-10 13:49+0200\n"
+"POT-Creation-Date: 2025-07-10 14:11+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -83,6 +83,24 @@ msgstr "Aucune donnée disponible"
 
 msgid "Most Popular Pages"
 msgstr "Pages les plus populaires"
+
+msgid "My Requests"
+msgstr "Mes demandes"
+
+msgid "Closed Tickets"
+msgstr "Tickets clôturés"
+
+msgid "My Reservations"
+msgstr "Mes réservations"
+
+msgid "Pending Future Reservations"
+msgstr "Réservations futures en attente"
+
+msgid "Confirmed Future Reservations"
+msgstr "Réservations futures confirmées"
+
+msgid "Past Reservations"
+msgstr "Réservations antérieures"
 
 msgid "Open"
 msgstr "Ouvert"
@@ -219,17 +237,8 @@ msgstr "Gestion"
 msgid "My Tickets"
 msgstr "Mes tickets"
 
-msgid "Closed Tickets"
-msgstr "Tickets clôturés"
-
 msgid "Ticket"
 msgstr "Ticket"
-
-msgid "My Requests"
-msgstr "Mes demandes"
-
-msgid "My Reservations"
-msgstr "Mes réservations"
 
 msgid "This site is private"
 msgstr "Ce site est privé"
@@ -3604,8 +3613,8 @@ msgstr "Refuser les réservations"
 msgid "Reject all with message"
 msgstr "Tout refuser avec message"
 
-#. Used in sentence: "${event} published."
 #.
+#. Used in sentence: "${event} published."
 msgid "Event"
 msgstr "Événement"
 
@@ -3997,8 +4006,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
-"Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
+"« Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
