--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -2583,6 +2583,66 @@ msgstr "Neue Notiz"
 msgid "Date/Time"
 msgstr "Datum/Zeit"
 
+msgid "Inquiry"
+msgstr "Anfrage"
+
+msgid "Proposal"
+msgstr "Vorschlag"
+
+msgid "Mandate"
+msgstr "Mandat"
+
+msgid "Report"
+msgstr "Bericht"
+
+msgid "Report and Proposal"
+msgstr "Bericht und Vorschlag"
+
+msgid "Decision"
+msgstr "Entscheid"
+
+msgid "Message"
+msgstr "Botschaft"
+
+msgid "Urgent Interpellation"
+msgstr "Dringliche Interpellation"
+
+msgid "Invitation"
+msgstr "Einladung"
+
+msgid "Interpellation"
+msgstr "Interpellation"
+
+msgid "Commission Report"
+msgstr "Kommissionsbericht"
+
+msgid "Communication"
+msgstr "Mitteilung"
+
+msgid "Motion"
+msgstr "Motion"
+
+msgid "Postulate"
+msgstr "Postulat"
+
+msgid "Resolution"
+msgstr "Resolution"
+
+msgid "Regulation"
+msgstr "Verordnung"
+
+msgid "Miscellaneous"
+msgstr "Verschiedenes"
+
+msgid "Elections"
+msgstr "Wahlen"
+
+msgid "first-signatory"
+msgstr "Erstunterzeichner:in"
+
+msgid "co-signatory"
+msgstr "Mitunterzeichner:in"
+
 #~ msgid "Parliamentarian is not in this commission."
 #~ msgstr "Parlamentarier:in ist nicht in dieser Kommission."
 
