--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -365,10 +365,10 @@ msgid "Political Business"
 msgstr "Politisches Geschäft"
 
 msgid "Do you really want to delete this political business?"
-msgstr ""
+msgstr "Möchten Sie das politische Geschäft wirklich löschen?"
 
 msgid "Delete political business"
-msgstr ""
+msgstr "Politisches Geschäft löschen"
 
 msgid "No availability periods defined."
 msgstr "Keine Verfügbarkeitszeiträume definiert."
@@ -2518,10 +2518,10 @@ msgid "New party"
 msgstr "Neue Partei"
 
 msgid "Added a new political business"
-msgstr ""
+msgstr "Politisches Geschäft hinzugefügt"
 
 msgid "New political business"
-msgstr ""
+msgstr "Neues politisches Geschäft"
 
 msgid "New Recipient"
 msgstr "Neuer Empfänger"
