--- a/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
+++ b/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-15 17:05+0200\n"
+"POT-Creation-Date: 2025-07-16 11:38+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -83,10 +83,12 @@ msgstr ""
 "JSON-Datei mit Mitgliedschaftsdaten (wer ist Mitglied welcher Organisation)."
 
 msgid "Validate JSON Schema"
-msgstr ""
+msgstr "JSON-Schema validieren"
 
 msgid "Check if the uploaded JSON files match the expected structure."
 msgstr ""
+"Überprüft ob die hochgeladenen JSON-Dateien der erwarteten Struktur "
+"entsprechen."
 
 #, python-format
 msgid "File ${name} is missing the \"results\" list."
@@ -206,6 +208,9 @@ msgstr "Bemerkungen"
 
 msgid "Political Party"
 msgstr "Partei"
+
+msgid "Party role"
+msgstr "Rolle in der Partei"
 
 msgid "Portrait"
 msgstr "Portrait"
