--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-15 17:05+0200\n"
+"POT-Creation-Date: 2025-07-16 11:39+0200\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -359,22 +359,22 @@ msgid "Political Business"
 msgstr "Business politique"
 
 msgid "Do you really want to delete this political business?"
-msgstr ""
+msgstr "Voulez-vous vraiment supprimer cette affaire politique?"
 
 msgid "Delete political business"
-msgstr ""
+msgstr "Supprimer les affaires politiques"
 
 msgid "No availability periods defined."
 msgstr "Aucune période de disponibilité définie."
 
 msgid "State:"
-msgstr "État :"
+msgstr "État:"
 
 msgid "Owner:"
-msgstr "Propriétaire :"
+msgstr "Propriétaire:"
 
 msgid "Kind:"
-msgstr "Type :"
+msgstr "Type:"
 
 #. Used in sentence: "<dynamic element> <dynamic element>"
 msgid "The chat request got accepted."
@@ -1938,12 +1938,6 @@ msgstr "Aucun parlementaire n'a été défini pour le moment."
 
 msgid "No parliamentary groups defined yet."
 msgstr "Aucun groupe parlementaire n'a été défini pour le moment."
-
-msgid "No parties defined yet."
-msgstr "Aucun parti n'a été défini pour le moment."
-
-msgid "Portrait"
-msgstr "Portrait"
 
 msgid "No payment providers defined."
 msgstr "Aucun fournisseur de paiement n'a été défini."
