--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-16 13:06+0200\n"
+"POT-Creation-Date: 2025-07-17 14:55+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -295,6 +295,18 @@ msgstr "Ratsinformationssystem"
 msgid "Meeting"
 msgstr "Sitzung"
 
+msgid "Edit"
+msgstr "Bearbeiten"
+
+msgid "Do you really want to delete this meeting?"
+msgstr "Diese Sitzung wirklich löschen?"
+
+msgid "This cannot be undone."
+msgstr "Dies kann nicht rückgängig gemacht werden."
+
+msgid "Delete meeting"
+msgstr "Sitzung löschen"
+
 msgid "Parliamentarians"
 msgstr "Parlamentarierinnen und Parlamentarier"
 
@@ -304,14 +316,8 @@ msgstr "Parlamentarier:in"
 msgid "Role (as a group member)"
 msgstr "Rolle (als Fraktionsmitglied)"
 
-msgid "Edit"
-msgstr "Bearbeiten"
-
 msgid "Do you really want to delete this parliamentarian?"
 msgstr "Möchten Sie diese:n Parlamentarier:in wirklich löschen?"
-
-msgid "This cannot be undone."
-msgstr "Dies kann nicht rückgängig gemacht werden."
 
 msgid "Delete parliamentarian"
 msgstr "Parlamentarier:in löschen"
@@ -2478,14 +2484,38 @@ msgstr "Neue Kommission"
 msgid "Your changes were saved"
 msgstr "Ihre Änderungen wurden gespeichert"
 
+msgid "The commission has been deleted."
+msgstr "Die Kommission wurde gelöscht."
+
 msgid "Sort"
 msgstr "Sortieren"
+
+msgid "Past Meetings"
+msgstr "Vergangene"
+
+msgid "Upcoming Meetings"
+msgstr "Zukünftige"
+
+msgid "Added a new meeting"
+msgstr "Neue Sitzung hinzugefügt"
+
+msgid "New meeting"
+msgstr "Neue Sitzung"
+
+msgid "Edit meeting"
+msgstr "Sitzung bearbeiten"
+
+msgid "The meeting has been deleted."
+msgstr "Die Sitzung wurde gelöscht."
 
 msgid "Added a new parliamentarian"
 msgstr "Parlamentarier:in hinzugefügt"
 
 msgid "New parliamentarian"
-msgstr "Neue:r Parlamentarier:in"
+msgstr "Neue/r Parlamentarier/in"
+
+msgid "The parliamentarian has been deleted."
+msgstr "Der Parlamentarier/in wurde gelöscht."
 
 msgid "Added a new role"
 msgstr "Neue Rolle hinzugefügt"
@@ -2493,11 +2523,17 @@ msgstr "Neue Rolle hinzugefügt"
 msgid "New role"
 msgstr "Neue Rolle"
 
+msgid "The parliamentarian role has been deleted."
+msgstr "Die Rolle des Parlamentariers wurde gelöscht."
+
 msgid "Added a new parliamentary group"
 msgstr "Fraktion hinzugefügt"
 
 msgid "New parliamentary group"
 msgstr "Neue Fraktion"
+
+msgid "The parliamentary group has been deleted."
+msgstr "Die Fraktion wurde gelöscht."
 
 msgid "Added a new political business"
 msgstr "Politisches Geschäft hinzugefügt"
@@ -2712,12 +2748,6 @@ msgstr "Neue Notiz"
 
 #~ msgid "End must be after start"
 #~ msgstr "Ende muss nach dem Start liegen"
-
-#~ msgid "Do you really want to delete this meeting?"
-#~ msgstr "Diese Sitzung wirklich löschen?"
-
-#~ msgid "Delete meeting"
-#~ msgstr "Sitzung löschen"
 
 #~ msgid "Do you really want to remove this parliamentarian?"
 #~ msgstr "Diese:n Parlamentarier:in wirklich entfernen?"
