Reintroduce miscellaneous business type

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -3474,6 +3474,9 @@ msgstr "Wahl"
 msgid "Parliamentary Statement"
 msgstr "Parlamentarische Erklärung"
 
+msgid "Miscellaneous"
+msgstr "Verschiedenes"
+
 msgid "Neujahrestag"
 msgstr "Neujahrestag"
 
