--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -3480,6 +3480,9 @@ msgstr "Election"
 msgid "Parliamentary Statement"
 msgstr "Déclaration parlementaire"
 
+msgid "Miscellaneous"
+msgstr "Divers"
+
 msgid "Neujahrestag"
 msgstr "Nouvel an"
 
