--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -3481,6 +3481,9 @@ msgstr "Elezione"
 msgid "Parliamentary Statement"
 msgstr "Dichiarazione parlamentare"
 
+msgid "Miscellaneous"
+msgstr "Varie"
+
 msgid "Neujahrestag"
 msgstr "Neujahrestag"
 
