--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-10 13:50+0200\n"
+"POT-Creation-Date: 2025-07-24 13:37+0200\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1845,6 +1845,9 @@ msgstr "Origine"
 
 msgid "This is an imported event"
 msgstr "Il s'agit d'un événement importé"
+
+msgid "General information about the event calendar"
+msgstr "Informations générales sur le calendrier des événements"
 
 msgid "Tag"
 msgstr "Étiquette"
