--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2025-07-10 13:50+0200\n"
+"POT-Creation-Date: 2025-07-24 13:37+0200\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1839,6 +1839,9 @@ msgstr "Origine"
 
 msgid "This is an imported event"
 msgstr "Questo è un evento importato"
+
+msgid "General information about the event calendar"
+msgstr "Informazioni generali sul calendario degli eventi"
 
 msgid "Tag"
 msgstr "Tag"
