--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-21 08:00+0200\n"
+"POT-Creation-Date: 2025-07-24 13:54+0200\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1758,9 +1758,6 @@ msgstr "Souscrire à la lettre d'informations"
 msgid "Receive the newsletter by email"
 msgstr "Recevoir la lettre d'informations par e-mail"
 
-msgid "Year"
-msgstr "Année"
-
 msgid "Years"
 msgstr "Années"
 
@@ -1857,6 +1854,9 @@ msgstr "Origine"
 
 msgid "This is an imported event"
 msgstr "Il s'agit d'un événement importé"
+
+msgid "General information about the event calendar"
+msgstr "Informations générales sur le calendrier des événements"
 
 msgid "Tag"
 msgstr "Étiquette"
@@ -2019,6 +2019,9 @@ msgstr "Aucun business politique n'a été défini pour le moment."
 
 msgid "Datum"
 msgstr "Date"
+
+msgid "Year"
+msgstr "Année"
 
 msgid "No publications"
 msgstr "Aucune publication"
