--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2025-07-21 08:00+0200\n"
+"POT-Creation-Date: 2025-07-24 13:54+0200\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1751,9 +1751,6 @@ msgstr "Iscriviti alla newsletter"
 msgid "Receive the newsletter by email"
 msgstr "Ricevi la newsletter via e-mail"
 
-msgid "Year"
-msgstr "Anno"
-
 msgid "Years"
 msgstr "Anni"
 
@@ -1851,6 +1848,9 @@ msgstr "Origine"
 
 msgid "This is an imported event"
 msgstr "Questo è un evento importato"
+
+msgid "General information about the event calendar"
+msgstr "Informazioni generali sul calendario degli eventi"
 
 msgid "Tag"
 msgstr "Tag"
@@ -2013,6 +2013,9 @@ msgstr "Nessun affare politico ancora definito."
 
 msgid "Datum"
 msgstr "Data"
+
+msgid "Year"
+msgstr "Anno"
 
 msgid "No publications"
 msgstr "Nessuna pubblicazione"
